<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvity.EditActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_task"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/addnewanim"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/addtask"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait_while_we_add_your_task"
        android:textColor="@color/textHeadline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addnewanim"
        app:layout_constraintVertical_bias="0.728"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:visibility="invisible"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doneanim"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/done"
        android:visibility="invisible"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/erroranim"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/error"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:alpha="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4">


        <EditText
            android:id="@+id/newtask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@drawable/editext_bg"
            android:drawableStart="@drawable/outline_title_24"
            android:drawablePadding="16dp"
            android:hint="@string/title"
            android:maxLines="1"
            android:fontFamily="sans-serif-condensed"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:gravity="start"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/editext_bg"
            android:drawablePadding="16dp"
            android:hint="@string/content"
            android:inputType="text"
            android:padding="16dp"
            android:maxLines="10"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"/>
        <Button
            android:id="@+id/edittaskbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/edit_task"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/taskbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/mark_as_complete"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>